--- a/app/views/appearances/new.html.erb
+++ b/app/views/appearances/new.html.erb
@@ -1,9 +1,9 @@
-<%= form_for @appearnce do |f|%>
+<%= form_for @appearance do |f|%>
 <%= f.label :guest%>
-<%= f.collection_select @guest_id, @guests, :id, :name%>
+<%= f.collection_select :guest_id, @guests, :id, :name%>
 <%= f.label :episode%>
-<%= f.collection_select @episode_id, @episodes, :id, :date%>
+<%= f.collection_select :episode_id, @episodes, :id, :date%>
 <%= f.label :numeric_rating%>
 <%= f.number_field :numeric_rating %>
 <%= f.submit %>
-<%= end %>
+<% end %>
