--- a/app/views/guests/show.html.erb
+++ b/app/views/guests/show.html.erb
@@ -1,2 +1,6 @@
 <h2><%= @guest.name %></h2>
 Occupation: <%= @guest.occupation %>
+<% @appearances.each do |app| %>
+    <p>Episode: <%= link_to app.episode.date, episode_path(app.episode) %>, 
+    Rating: <%= app.rating %></p>
+<%end%>
