--- a/app/views/appearances/new.html.erb
+++ b/app/views/appearances/new.html.erb
@@ -3,5 +3,13 @@
 <%= f.collection_select :guest_id, @guests, :id, :name %>
 <%= f.label :episode_id %>
 <%= f.collection_select :episode_id, @episodes, :id, :date %>
+<%= f.label :rating %>
+<%= f.number_field :rating %>
 <%= f.submit %>
+<% end %>
+
+<% if @errors %>
+    <% @errors.each do |error| %>
+        <p><%= error %> </p>
+    <% end %>
 <% end %>
