--- a/app/views/episodes/show.html.erb
+++ b/app/views/episodes/show.html.erb
@@ -1,4 +1,4 @@
-<h1>@episode.date</h1>
+<h1><%= @episode.date %></h1>
 GUESTS: <% @episode.guests do |e_g|%>
 <%= link_to e_g.name, guest_path(e_g) %><br>
 <% end %>
