--- a/app/views/episodes/show.html.erb
+++ b/app/views/episodes/show.html.erb
@@ -2,3 +2,4 @@ Episode <%= @ep.date %>
 <% @guests.each do |guest| %>
     <p><%= link_to guest.name, guest_path(guest) %></p>
 <%end%>
+Average Appearance Rating: <%= @avg_rating %>
