--- a/app/views/guests/show.html.erb
+++ b/app/views/guests/show.html.erb
@@ -3,6 +3,7 @@
 <h2>Occupation: <%= @guest.occupation %></h2>
 
 <h2>Episodes appeared in:</h2>
+<h5>Sorted by rating</h5>
 <% @appearances.each do |appearance|%>
 <h3><%= link_to  appearance.return_episode(appearance.episode_id).date, episode_path(appearance.return_episode(appearance.episode_id)) %> Rating: <%= appearance.rating %><h3> 
 <% end %>
