--- a/app/views/appearances/new.html.erb
+++ b/app/views/appearances/new.html.erb
@@ -14,6 +14,6 @@
 <%end%>
 <%if @errors%>
     <% @errors.each do |error| %>
-        <%= error %>
+        <p><%= error %></p>
     <%end%>
 <%end%>
