--- a/app/views/appearances/new.html.erb
+++ b/app/views/appearances/new.html.erb
@@ -1,3 +1,9 @@
+<% if @errors %>
+<% @errors.each do |e|%>
+<%= e %>
+<% end %>
+<% end %>
+
 <%= form_for @appearance do |f|%>
 <%= f.label :guest%>
 <%= f.collection_select :guest_id, @guests, :id, :name%>
