--- a/app/views/guests/show.html.erb
+++ b/app/views/guests/show.html.erb
@@ -1,7 +1,7 @@
 <h1><%= @guest.name %></h1> 
 <h2><%= @guest.occupation %></h2><br>
 <h5>APPEARED ON : </h5> <br>
-<% @guest.appearances.each do |ga| %>
+<% @guest.best_shows.each do |ga| %>
 <%= link_to ga.episode.date, episode_path(ga.episode) %> <br>
 RATING: <%= ga.numeric_rating %><br><br>
 <% end %>
