--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
   </head>
 
   <body>
+
+  <h4> <%= link_to "All Episodes", episodes_path %> |    | <%= link_to "All Guests", guests_path %> |    | <%= link_to "Create New Appearance", new_appearance_path %>  </h4>
+  <hr>
     <%= yield %>
   </body>
 </html>
