--- a/app/views/episodes/show.html.erb
+++ b/app/views/episodes/show.html.erb
@@ -5,3 +5,6 @@
     <p><%= link_to guest.name, guest_path(guest) %><p><br>
 <% end %>
 
+
+<h1>Average Rating</h1><br>
+<%= @episode.average_rating %>
