--- a/app/views/appearances/new.html.erb
+++ b/app/views/appearances/new.html.erb
@@ -1,7 +1,8 @@
 <h1> Create New Appearances </h1><br>
+<%= flash[:errors] %>
 <%= form_for @appearance do |f| %>
-    <%= collection_select(@appearance, :guest_id, Guest.all, :id, :name) %>
-    <%= collection_select(@apperance, :episode_id, Episode.all, :id, :date) %> <br>
+    <%= f.collection_select(:guest_id, Guest.all, :id, :name) %>
+    <%= f.collection_select(:episode_id, Episode.all, :id, :date) %> <br>
      <%= f.label 'Rating' %><br>
       <%= f.text_field :appearance_rating %><br>
       <%= f.submit "Submit Appearance" %>
