--- a/app/views/episodes/show.html.erb
+++ b/app/views/episodes/show.html.erb
@@ -1,6 +1,7 @@
 <h1> <%= @episode.date %> </h1><br>
-<% @apperances.each do |episode| %>
+<% @episode.guests.each do |guest| %>
+    <ul>
     <li><%= link_to guest.name, guest_path(guest) %></li>
-    <p><%= guest.occupation %></p>
-  <% end %>
+    <%= guest.occupation %>
+    </ul>
 <% end %>
