--- a/app/views/appearances/new.html.erb
+++ b/app/views/appearances/new.html.erb
@@ -1,5 +1,7 @@
 <h1> Create New Appearances </h1><br>
+<%if flash[:errors] %>
 <%= flash[:errors] %>
+<% end %>
 <%= form_for @appearance do |f| %>
     <%= f.collection_select(:guest_id, Guest.all, :id, :name) %>
     <%= f.collection_select(:episode_id, Episode.all, :id, :date) %> <br>
